crates/compiler/semantic/tests/snapshots/diagnostics__functions::tuple_destructuring::test_tuple_destructuring_arity_mismatch.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::tuple_destructuring::test_tuple_destructuring_arity_mismatch"
---
Fixture: semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_arity_mismatch
============================================================
Source code:

        fn test() {
            let (x, y) = (1, 2, 3); // Error: Pattern has 2 elements but value has 3
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Tuple pattern has 2 elements but value has 3 elements
   ╭─[ semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_arity_mismatch:3:26 ]
   │
 3 │             let (x, y) = (1, 2, 3); // Error: Pattern has 2 elements but value has 3
   │                          ────┬────  
   │                              ╰────── Tuple pattern has 2 elements but value has 3 elements
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_arity_mismatch:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
