crates/compiler/semantic/tests/snapshots/diagnostics__functions::tuple_destructuring::test_tuple_destructuring_type_mismatch.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::tuple_destructuring::test_tuple_destructuring_type_mismatch"
---
Fixture: semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_type_mismatch
============================================================
Source code:

        fn test() {
            let (x, y) = 42; // Error: Cannot destructure non-tuple
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Cannot destructure non-tuple type 'felt' in tuple pattern
   ╭─[ semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_type_mismatch:3:26 ]
   │
 3 │             let (x, y) = 42; // Error: Cannot destructure non-tuple
   │                          ─┬  
   │                           ╰── Cannot destructure non-tuple type 'felt' in tuple pattern
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_type_mismatch:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
