crates/compiler/semantic/tests/snapshots/diagnostics__functions::tuple_destructuring::test_tuple_destructuring_unused_variables.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::tuple_destructuring::test_tuple_destructuring_unused_variables"
---
Fixture: semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_unused_variables
============================================================
Source code:

        func test() {
            let (x, y) = (1, 2); // y should be marked as unused
            let z = x + 1;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_unused_variables:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
