crates/compiler/semantic/tests/snapshots/diagnostics__functions::tuple_destructuring::test_tuple_destructuring_wrong_type_annotation.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::tuple_destructuring::test_tuple_destructuring_wrong_type_annotation"
---
Fixture: semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_wrong_type_annotation
============================================================
Source code:

        fn test() {
            let (x, y): felt = (1, 2); // Error: Expected felt, found tuple
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Type mismatch for tuple destructuring. Expected 'felt', found '(felt, felt)'
   ╭─[ semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_wrong_type_annotation:3:32 ]
   │
 3 │             let (x, y): felt = (1, 2); // Error: Expected felt, found tuple
   │                                ───┬──  
   │                                   ╰──── Type mismatch for tuple destructuring. Expected 'felt', found '(felt, felt)'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::functions::tuple_destructuring::test_tuple_destructuring_wrong_type_annotation:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
