crates/compiler/semantic/tests/snapshots/diagnostics__lib::integration::test_comprehensive_error_detection.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::integration::test_comprehensive_error_detection"
---
Fixture: lib::integration::test_comprehensive_error_detection
============================================================
Source code:

        func helper(x: felt) -> felt {
            let unused = 42; // Unused variable
            return undefined_var; // Undeclared variable
        }

        func test() -> felt {
            let duplicate = 1;
            let duplicate = 2; // Duplicate definition

            let result = nonexistent_function(10); // Undeclared function
            return result;

            let unreachable = 3; // Unreachable code
        }
    
============================================================
Found 4 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ lib::integration::test_comprehensive_error_detection:4:20 ]
   │
 4 │             return undefined_var; // Undeclared variable
   │                    ──────┬──────  
   │                          ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[1001] Error: Undeclared variable 'nonexistent_function'
    ╭─[ lib::integration::test_comprehensive_error_detection:11:26 ]
    │
 11 │             let result = nonexistent_function(10); // Undeclared function
    │                          ──────────┬─────────  
    │                                    ╰─────────── Undeclared variable 'nonexistent_function'
────╯

--- Diagnostic 3 ---
[1003] Error: Duplicate definition of 'duplicate'
   ╭─[ lib::integration::test_comprehensive_error_detection:9:17 ]
   │
 9 │             let duplicate = 2; // Duplicate definition
   │                 ────┬────  
   │                     ╰────── Duplicate definition of 'duplicate'
───╯

--- Diagnostic 4 ---
[3001] Warning: Unreachable variable declaration
    ╭─[ lib::integration::test_comprehensive_error_detection:14:13 ]
    │
 14 │             let unreachable = 3; // Unreachable code
    │             ──────────┬─────────  
    │                       ╰─────────── Unreachable variable declaration
────╯
