crates/compiler/semantic/tests/snapshots/diagnostics__scoping::duplicate_definitions::test_duplicate_function_names.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::duplicate_definitions::test_duplicate_function_names"
---
Fixture: semantic_tests::scoping::duplicate_definitions::test_duplicate_function_names
============================================================
Source code:

        func duplicate_func() {
            return ();
        }

        func duplicate_func() {
            return ();
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'duplicate_func'
   ╭─[ semantic_tests::scoping::duplicate_definitions::test_duplicate_function_names:6:14 ]
   │
 6 │         func duplicate_func() {
   │              ───────┬──────  
   │                     ╰──────── Duplicate definition of 'duplicate_func'
───╯
