crates/compiler/semantic/tests/snapshots/diagnostics__scoping::duplicate_definitions::test_duplicate_parameters.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::duplicate_definitions::test_duplicate_parameters"
---
Fixture: semantic_tests::scoping::duplicate_definitions::test_duplicate_parameters
============================================================
Source code:

        func test(param: felt, param: felt) {
            return param;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'param'
   ╭─[ semantic_tests::scoping::duplicate_definitions::test_duplicate_parameters:2:32 ]
   │
 2 │         func test(param: felt, param: felt) {
   │                                ──┬──  
   │                                  ╰──── Duplicate definition of 'param'
───╯
