crates/compiler/semantic/tests/snapshots/diagnostics__scoping::nested_scopes::test_nested_scope_variable_access.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::nested_scopes::test_nested_scope_variable_access"
---
Fixture: semantic_tests::scoping::nested_scopes::test_nested_scope_variable_access
============================================================
Source code:

        fn test() {
            let outer = 1;
            {
                let middle = 2;
                {
                    let inner = 3;
                }
                let bad = inner; // Error: inner not accessible
            }
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scope_variable_access:9:27 ]
   │
 9 │                 let bad = inner; // Error: inner not accessible
   │                           ──┬──  
   │                             ╰──── Undeclared variable 'inner'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scope_variable_access:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
