crates/compiler/semantic/tests/snapshots/diagnostics__scoping::nested_scopes::test_scope_boundaries_with_assignments.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::nested_scopes::test_scope_boundaries_with_assignments"
---
Fixture: semantic_tests::scoping::nested_scopes::test_scope_boundaries_with_assignments
============================================================
Source code:

        func test() {
            let x = 1;
            {
                let y = 2;
                x = y + 1; // OK: x is visible, y is visible
            }
            y = 3; // Error: y not visible outside its scope
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'y'
   ╭─[ semantic_tests::scoping::nested_scopes::test_scope_boundaries_with_assignments:8:13 ]
   │
 8 │             y = 3; // Error: y not visible outside its scope
   │             ┬  
   │             ╰── Undeclared variable 'y'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::nested_scopes::test_scope_boundaries_with_assignments:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
