crates/compiler/semantic/tests/snapshots/diagnostics__scoping::scope_visibility::test_complex_nested_visibility.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::scope_visibility::test_complex_nested_visibility"
---
Fixture: semantic_tests::scoping::scope_visibility::test_complex_nested_visibility
============================================================
Source code:

        fn test() {
            let outer = 1;
            {
                let middle = outer + 1; // OK
                {
                    let inner = middle + outer; // OK
                }
                let bad = inner; // Error: inner not visible
            }
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ semantic_tests::scoping::scope_visibility::test_complex_nested_visibility:9:27 ]
   │
 9 │                 let bad = inner; // Error: inner not visible
   │                           ──┬──  
   │                             ╰──── Undeclared variable 'inner'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::scope_visibility::test_complex_nested_visibility:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
